deploy: e34a0816307cec68dbd166f488c48d12639e7d9f

--- a/assignment/04-lab/index.html
+++ b/assignment/04-lab/index.html
@@ -536,6 +536,8 @@ The objective of the lab is to examine the association between weekly average de
 <p><strong>The objective of the lab is to examine the association between weekly average dew point and wind speed in four regions of the US and by elevation.</strong></p>
 <p>Per 
 <a href="https://en.wikipedia.org/wiki/Dew_point" target="_blank" rel="noopener">Wikipedia</a>: &ldquo;The dew point of a given body of air is the temperature to which it must be cooled to become saturated with water vapor. This temperature depends on the pressure and water content of the air.&rdquo;</p>
+<p>Again, feel free to supplement your knowledge of this dataset by checking out the 
+<a href="https://github.com/USCbiostats/data-science-data/blob/master/02_met/met-datadictionary.pdf" target="_blank" rel="noopener">data dictionary</a>.</p>
 <h1 id="steps">Steps</h1>
 <h3 id="1-read-in-the-data">1. Read in the data</h3>
 <p>First download and then read in with <code>data.table::fread()</code></p>
