deploy: 102bfd63efb7689765ba102689e5591c52f557d7

--- a/reading/02-reading/index.html
+++ b/reading/02-reading/index.html
@@ -31,8 +31,8 @@
     
   
   <meta name="description" content="Required reading You are expected to have read this when you show up for the session.
-   Chapter 1 Why Git? Why GitHub? of the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.
-  Roger Peng’s Mastering Software Development Book Section 3.9 Version control and Github (link)
+ Chapter 1 Why Git? Why GitHub? of the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.
+ Roger Peng’s Mastering Software Development Book Section 3.9 Version control and Github (link)
   You are also expected to have git installed in your system and having a GitHub account.">
 
   
@@ -249,8 +249,8 @@
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/reading/02-reading/">
   <meta property="og:title" content="Version control and reproducible research | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Required reading You are expected to have read this when you show up for the session.
-   Chapter 1 Why Git? Why GitHub? of the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.
-  Roger Peng’s Mastering Software Development Book Section 3.9 Version control and Github (link)
+ Chapter 1 Why Git? Why GitHub? of the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.
+ Roger Peng’s Mastering Software Development Book Section 3.9 Version control and Github (link)
   You are also expected to have git installed in your system and having a GitHub account."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
@@ -527,34 +527,32 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h1 id="required-reading">Required reading</h1>
+      
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+
+
+<div id="required-reading" class="section level1">
+<h1>Required reading</h1>
 <p>You are expected to have read this when you show up for the session.</p>
 <ul>
-<li>
-<p>
-<a href="https://happygitwithr.com/big-picture.html" target="_blank" rel="noopener">Chapter 1 Why Git? Why GitHub?</a> of
-the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.</p>
-</li>
-<li>
-<p>Roger Peng’s Mastering Software Development Book Section 3.9 Version control
+<li><p><a href="https://happygitwithr.com/big-picture.html">Chapter 1 Why Git? Why GitHub?</a> of
+the “Happy Git and GitHub for the useR” by Jenny Bryan and Jim Hester.</p></li>
+<li><p>Roger Peng’s Mastering Software Development Book Section 3.9 Version control
 and Github
-
-<a href="https://bookdown.org/rdpeng/RProgDA/version-control-and-github.html" target="_blank" rel="noopener">(link)</a></p>
-</li>
+<a href="https://bookdown.org/rdpeng/RProgDA/version-control-and-github.html">(link)</a></p></li>
 </ul>
 <p>You are also expected to have git installed in your system and having a
-GitHub account. For this see 
-<a href="https://git-scm.com/downloads" target="_blank" rel="noopener">here</a>,
-
-<a href="https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration" target="_blank" rel="noopener">here</a>
-and 
-<a href="http://github.com/" target="_blank" rel="noopener">here</a>.</p>
-<h1 id="optional-reading">Optional reading</h1>
+GitHub account. For this see <a href="https://git-scm.com/downloads">here</a>,
+<a href="https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration">here</a>
+and <a href="http://github.com/">here</a>.</p>
+</div>
+<div id="optional-reading" class="section level1">
+<h1>Optional reading</h1>
 <ul>
-<li>Chapter one of the 
-<a href="https://git-scm.com/book/en/v2" target="_blank" rel="noopener">Pro git book</a> will give you
+<li>Chapter one of the <a href="https://git-scm.com/book/en/v2">Pro git book</a> will give you
 a more technical overview of what’s git and what happens under-the-hood.</li>
 </ul>
+</div>
 
     </div>
 
