--- a/reading/11-reading/index.html
+++ b/reading/11-reading/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Required reading You are expected to have read these items before class. Most of these linked sections/chapters are quite short.
 Plotly Please read the following sections of Interactive web-based data visualization with R, plotly, and shiny, by Carson Sievert:
- Creating Views (Plotly features): Sections 1-3, 5-7 Publishing Views: Sections 9-12 Arranging and Animating Views: Sections 13-14 Linking Multiple Data Views: Sections 15 Server-side linking with Shiny: Section 17  Shiny   Introduction to Interactive Documents: provides a quick guide to getting started with Shiny.">
+ Creating Views (Plotly features): Sections 1-3, 5-7 Publishing Views: Sections 9-12 Arranging and Animating Views: Sections 13-14 Linking Multiple Data Views: Sections 15 Server-side linking with Shiny: Section 17   Shiny  Introduction to Interactive Documents: provides a quick guide to getting started with Shiny.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/reading/11-reading/">
@@ -249,7 +249,7 @@ Plotly Please read the following sections of Interactive web-based data visualiz
   <meta property="og:title" content="Interactive visualization and effective data communication I | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Required reading You are expected to have read these items before class. Most of these linked sections/chapters are quite short.
 Plotly Please read the following sections of Interactive web-based data visualization with R, plotly, and shiny, by Carson Sievert:
- Creating Views (Plotly features): Sections 1-3, 5-7 Publishing Views: Sections 9-12 Arranging and Animating Views: Sections 13-14 Linking Multiple Data Views: Sections 15 Server-side linking with Shiny: Section 17  Shiny   Introduction to Interactive Documents: provides a quick guide to getting started with Shiny."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+ Creating Views (Plotly features): Sections 1-3, 5-7 Publishing Views: Sections 9-12 Arranging and Animating Views: Sections 13-14 Linking Multiple Data Views: Sections 15 Server-side linking with Shiny: Section 17   Shiny  Introduction to Interactive Documents: provides a quick guide to getting started with Shiny."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -527,11 +527,16 @@ Plotly Please read the following sections of Interactive web-based data visualiz
   <div class="article-container">
 
     <div class="article-style">
-      <h1 id="required-reading">Required reading</h1>
+      
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+
+
+<div id="required-reading" class="section level1">
+<h1>Required reading</h1>
 <p>You are expected to have read these items before class. Most of these linked sections/chapters are quite short.</p>
-<h2 id="plotly">Plotly</h2>
-<p>Please read the following sections of 
-<a href="https://plotly-r.com/index.html" target="_blank" rel="noopener">Interactive web-based data visualization with R, plotly, and shiny</a>, by Carson Sievert:</p>
+<div id="plotly" class="section level2">
+<h2>Plotly</h2>
+<p>Please read the following sections of <a href="https://plotly-r.com/index.html">Interactive web-based data visualization with R, plotly, and shiny</a>, by Carson Sievert:</p>
 <ul>
 <li>Creating Views (Plotly features): Sections 1-3, 5-7</li>
 <li>Publishing Views: Sections 9-12</li>
@@ -539,35 +544,40 @@ Plotly Please read the following sections of Interactive web-based data visualiz
 <li>Linking Multiple Data Views: Sections 15</li>
 <li>Server-side linking with Shiny: Section 17</li>
 </ul>
-<h2 id="shiny">Shiny</h2>
+</div>
+<div id="shiny" class="section level2">
+<h2>Shiny</h2>
 <ul>
-<li>
-<a href="https://shiny.rstudio.com/articles/interactive-docs.html" target="_blank" rel="noopener">Introduction to Interactive Documents</a>: provides a quick guide to getting started with Shiny.</li>
+<li><a href="https://shiny.rstudio.com/articles/interactive-docs.html">Introduction to Interactive Documents</a>: provides a quick guide to getting started with Shiny.</li>
 </ul>
-<h2 id="dashboards">Dashboards</h2>
+</div>
+<div id="dashboards" class="section level2">
+<h2>Dashboards</h2>
 <ul>
-<li>
-<a href="https://bookdown.org/yihui/rmarkdown/dashboards.html" target="_blank" rel="noopener">Chapter 5: Dashboards (Layout, Components, Shiny)</a> from 
-<a href="https://bookdown.org/yihui/rmarkdown/" target="_blank" rel="noopener">R Markdown: The Definitive Guide</a>, Yihui Xie, J. J. Allaire, Garrett Grolemund, provides a guide for using <strong>Shiny</strong> with <strong>flexdashboard</strong> to create interactive documents from R Markdown</li>
+<li><a href="https://bookdown.org/yihui/rmarkdown/dashboards.html">Chapter 5: Dashboards (Layout, Components, Shiny)</a> from <a href="https://bookdown.org/yihui/rmarkdown/">R Markdown: The Definitive Guide</a>, Yihui Xie, J. J. Allaire, Garrett Grolemund, provides a guide for using <strong>Shiny</strong> with <strong>flexdashboard</strong> to create interactive documents from R Markdown</li>
 </ul>
+<p><br>
 <br>
-<br>
-<br>
-<h1 id="optional-reading">Optional reading</h1>
-<h2 id="interactive-visualization">Interactive visualization</h2>
+<br></p>
+</div>
+</div>
+<div id="optional-reading" class="section level1">
+<h1>Optional reading</h1>
+<div id="interactive-visualization" class="section level2">
+<h2>Interactive visualization</h2>
 <ul>
-<li>The official 
-<a href="http://shiny.rstudio.com" target="_blank" rel="noopener">Shiny website</a> includes extensive articles, tutorials, and examples.</li>
-<li>
-<a href="https://www.coursera.org/lecture/data-products/shiny-1-1-xgyMn" target="_blank" rel="noopener">Coursera course on developing data products, sessions on Shiny, GoogleVis, and Plotly</a></li>
+<li>The official <a href="http://shiny.rstudio.com">Shiny website</a> includes extensive articles, tutorials, and examples.</li>
+<li><a href="https://www.coursera.org/lecture/data-products/shiny-1-1-xgyMn">Coursera course on developing data products, sessions on Shiny, GoogleVis, and Plotly</a></li>
 </ul>
-<h2 id="data-visualization-best-practices">Data visualization best practices</h2>
+</div>
+<div id="data-visualization-best-practices" class="section level2">
+<h2>Data visualization best practices</h2>
 <ul>
-<li>
-<a href="https://kieranhealy.org/publications/dataviz/" target="_blank" rel="noopener">Data Visualization: A Practical Introduction</a>, Kieran Healy</li>
-<li>
-<a href="https://serialmentor.com/dataviz/" target="_blank" rel="noopener">Fundamentals of Data Visualization</a>, Claus O. Wilke</li>
+<li><a href="https://kieranhealy.org/publications/dataviz/">Data Visualization: A Practical Introduction</a>, Kieran Healy</li>
+<li><a href="https://serialmentor.com/dataviz/">Fundamentals of Data Visualization</a>, Claus O. Wilke</li>
 </ul>
+</div>
+</div>
 
     </div>
 
