deploy: 00a07a7b8a24617edb0c6db5eccf8587dcd87ddd

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -30,7 +30,8 @@
   
     
   
-  <meta name="description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data.">
+  <meta name="description" content="PM 566: Introduction to Health Data Science Course Overview Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Academic Integrity  Statement on the use of Artificial Intelligence  Students and Disability Accommodations: Support Systems:   PM 566: Introduction to Health Data Science Term: Fall 2023
+Time: Friday 9am - 12:55pm">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/syllabus/">
@@ -245,7 +246,8 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/syllabus/">
   <meta property="og:title" content="Syllabus | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Course objectives Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Statement on academic conduct and support systems  Academic Conduct: Students and Disability Accommodations: Support Systems:    Course objectives This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="PM 566: Introduction to Health Data Science Course Overview Learning Objectives Course Notes Technological Proficiency and Hardware/Software Required Readings and Supplementary Materials Supplementary References Description and Assessment of Assignments Grading Breakdown Assignment Submission Policy Schedule Academic Integrity  Statement on the use of Artificial Intelligence  Students and Disability Accommodations: Support Systems:   PM 566: Introduction to Health Data Science Term: Fall 2023
+Time: Friday 9am - 12:55pm"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -518,7 +520,8 @@
 
 <div id="TOC">
 <ul>
-<li><a href="#course-objectives">Course objectives</a></li>
+<li><a href="#pm-566-introduction-to-health-data-science">PM 566: Introduction to Health Data Science</a></li>
+<li><a href="#course-overview">Course Overview</a></li>
 <li><a href="#learning-objectives">Learning Objectives</a></li>
 <li><a href="#course-notes">Course Notes</a></li>
 <li><a href="#technological-proficiency-and-hardwaresoftware-required">Technological Proficiency and Hardware/Software Required</a></li>
@@ -528,17 +531,24 @@
 <li><a href="#grading-breakdown">Grading Breakdown</a></li>
 <li><a href="#assignment-submission-policy">Assignment Submission Policy</a></li>
 <li><a href="#schedule">Schedule</a></li>
-<li><a href="#statement-on-academic-conduct-and-support-systems">Statement on academic conduct and support systems</a>
+<li><a href="#academic-integrity">Academic Integrity</a>
 <ul>
-<li><a href="#academic-conduct">Academic Conduct:</a></li>
+<li><a href="#statement-on-the-use-of-artificial-intelligence">Statement on the use of Artificial Intelligence</a></li>
+</ul></li>
 <li><a href="#students-and-disability-accommodations">Students and Disability Accommodations:</a></li>
 <li><a href="#support-systems">Support Systems:</a></li>
-</ul></li>
 </ul>
 </div>
 
-<div id="course-objectives" class="section level2">
-<h2>Course objectives</h2>
+<div id="pm-566-introduction-to-health-data-science" class="section level2">
+<h2>PM 566: Introduction to Health Data Science</h2>
+<p><strong>Term</strong>: Fall 2023</p>
+<p><strong>Time</strong>: Friday 9am - 12:55pm</p>
+<p><strong>Location</strong>: SSB 114</p>
+<p><strong>Units</strong>: 4</p>
+</div>
+<div id="course-overview" class="section level2">
+<h2>Course Overview</h2>
 <p>This course serves as an introduction to data science with a focus on the acquisition and analysis of real-life data. Students will learn the toolsets needed to 1) create workable and reproducible datasets by accessing, scraping, sampling and cleaning data; 2) conduct exploratory data analysis and data visualization; 3) apply statistical tools to learn from data; and 4) build functions and basic apps. Coding languages R and Python will be used.</p>
 </div>
 <div id="learning-objectives" class="section level2">
@@ -572,15 +582,16 @@
 <div id="supplementary-references" class="section level2">
 <h2>Supplementary References</h2>
 <ol style="list-style-type: decimal">
-<li>R for Data Science, 2017 Garrett Grolemund and Hadley Wickham. <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a></li>
-<li>Exploratory Data Analysis with R, 2020 Roger Peng <a href="https://bookdown.org/rdpeng/exdata/" class="uri">https://bookdown.org/rdpeng/exdata/</a></li>
-<li>Mastering Software Development in R, 2017 Roger Peng, Sean Kross, Brooke Anderson <a href="https://bookdown.org/rdpeng/RProgDA/" class="uri">https://bookdown.org/rdpeng/RProgDA/</a></li>
-<li>R Packages, 2023 Hadley Wickham and Jennifer Bryan. <a href="https://r-pkgs.org/" class="uri">https://r-pkgs.org/</a></li>
+<li>R for Data Science, 2017. Garrett Grolemund and Hadley Wickham. <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a></li>
+<li>Exploratory Data Analysis with R, 2020. Roger Peng. <a href="https://bookdown.org/rdpeng/exdata/" class="uri">https://bookdown.org/rdpeng/exdata/</a></li>
+<li>Mastering Software Development in R, 2017. Roger Peng, Sean Kross, Brooke Anderson. <a href="https://bookdown.org/rdpeng/RProgDA/" class="uri">https://bookdown.org/rdpeng/RProgDA/</a></li>
+<li>R Packages, 2023. Hadley Wickham and Jennifer Bryan. <a href="https://r-pkgs.org/" class="uri">https://r-pkgs.org/</a></li>
+<li>Modern Data Science with R, 2023. Benjamin S. Baumer, Daniel T. Kaplan, and Nicholas J. Horton. <a href="https://mdsr-book.github.io/mdsr3e/" class="uri">https://mdsr-book.github.io/mdsr3e/</a></li>
 </ol>
 </div>
 <div id="description-and-assessment-of-assignments" class="section level2">
 <h2>Description and Assessment of Assignments</h2>
-<p><strong>Assignments:</strong> There will be 5 assignments given throughout the semester, approximately 1 every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.</p>
+<p><strong>Assignments:</strong> There will be 5 assignments given throughout the semester, approximately 1 every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in Quarto or R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.</p>
 <p><strong>Final Project:</strong> The final project will be to write a report for an analysis applied to a real-world dataset and to create a website that includes interactive visualizations to display data/results. The source code, website files, and PDF report will be uploaded to GitHub.</p>
 <p><strong>Labs:</strong> Lab attendance is mandatory and participation in the lab is required and counts as part of the overall lab grade.</p>
 </div>
@@ -696,23 +707,24 @@
 </p>
 <p>As the weeks go by, consult the <a href="/PM566/schedule/">Schedule Page</a> for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page.</p>
 </div>
-<div id="statement-on-academic-conduct-and-support-systems" class="section level2">
-<h2>Statement on academic conduct and support systems</h2>
-<div id="academic-conduct" class="section level3">
-<h3>Academic Conduct:</h3>
-<p>Plagiarism – presenting someone else’s ideas as your own, either verbatim or recast in
-your own words – is a serious academic offense with serious consequences. Please
-familiarize yourself with the discussion of plagiarism in SCampus in Part B, Section 11,
-“Behavior Violating University Standards” <a href="http://policy.usc.edu/scampus-part-b" class="uri">http://policy.usc.edu/scampus-part-b</a>. Other forms
-of academic dishonesty are equally unacceptable. See additional information in SCampus
-and university policies on scientific misconduct, <a href="http://policy.usc.edu/research-and-scholarship-misconduct" class="uri">http://policy.usc.edu/research-and-scholarship-misconduct</a>.</p>
+<div id="academic-integrity" class="section level2">
+<h2>Academic Integrity</h2>
+<p>The University of Southern California is foremost a learning community committed to fostering successful scholars and researchers dedicated to the pursuit of knowledge and the transmission of ideas. Academic misconduct is in contrast to the university’s mission to educate students through a broad array of first-rank academic, professional, and extracurricular programs and includes any act of dishonesty in the submission of academic work (either in draft or final form).</p>
+<p>This course will follow the expectations for academic integrity as stated in the <a href="https://policy.usc.edu/studenthandbook/">USC Student Handbook</a>. All students are expected to submit assignments that are original work and prepared specifically for the course/section in this academic term. You may not submit work written by others or “recycle” work prepared for other courses without obtaining written permission from the instructor(s). Students suspected of engaging in academic misconduct will be reported to the Office of Academic Integrity.</p>
+<p>Other violations of academic misconduct include, but are not limited to, cheating, plagiarism, fabrication (e.g., falsifying data), knowingly assisting others in acts of academic dishonesty, and any act that gains or is intended to gain an unfair academic advantage.</p>
+<p>The impact of academic dishonesty is far-reaching and is considered a serious offense against the university and could result in outcomes such as failure on the assignment, failure in the course, suspension, or even expulsion from the university.</p>
+<p>For more information about academic integrity see the <a href="https://policy.usc.edu/studenthandbook/">student handbook</a> or the <a href="https://academicintegrity.usc.edu/">Office of Academic Integrity’s website</a>, and university policies on <a href="https://policy.usc.edu/research-and-scholarship-misconduct/">Research and Scholarship Misconduct</a>.</p>
+<div id="statement-on-the-use-of-artificial-intelligence" class="section level3">
+<h3>Statement on the use of Artificial Intelligence</h3>
+<p>Generative artificial intelligence (AI) may be used under the direction and rules specified by the course instructor in specific circumstances as outlined in the syllabus. The student is responsible for the quality and content of all written assignments. Unless otherwise indicated by the course instructor, generative AI may be used to create an initial literature review, document outline and/or to organize material toward a first draft of a class paper, proofreading, or grammatical accuracy; however the final content of the written document and critical thinking of the ideas presented in the document must represent the student’s individual work and ideas learned through course content and/or research conducted from sources outside of the generative AI system. The student must include an annotation on all materials submitted that explicitly documents how AI was used to generate the document and properly reference both the sources and the AI tools such as ChatGPT (OpenAI, 2023). The student must review the information in the document and edit for accuracy, completeness, proper grammar, and demonstrate that the wording accurately reflects the student’s understanding and purpose in writing the text. Students should be aware that text generated solely from AI generators may include factual errors, bias, and may contain incomplete or inaccurate reference information, in addition to furthering appropriating knowledge produced by historically marginalized scholars without proper crediting. If you have any questions on whether a specific AI tool is allowed for any aspect of your work in this class, please ask your instructor for guidance. Failure to ensure agreement with your instructor on use of AI, prior to doing so, may result in a zero score. (NOTE: instructors have sophisticated tools to determine AI plagiarism.)</p>
 </div>
-<div id="students-and-disability-accommodations" class="section level3">
-<h3>Students and Disability Accommodations:</h3>
+</div>
+<div id="students-and-disability-accommodations" class="section level2">
+<h2>Students and Disability Accommodations:</h2>
 <p>USC welcomes students with disabilities into all of the University’s educational programs. The Office of Student Accessibility Services (OSAS) is responsible for the determination of appropriate accommodations for students who encounter disability-related barriers. Once a student has completed the OSAS process (registration, initial appointment, and submitted documentation) and accommodations are determined to be reasonable and appropriate, a Letter of Accommodation (LOA) will be available to generate for each course. The LOA must be given to each course instructor by the student and followed up with a discussion. This should be done as early in the semester as possible as accommodations are not retroactive. More information can be found at <a href="http://osas.usc.edu" class="uri">http://osas.usc.edu</a>. You may contact OSAS at (213) 740-0776 or via email at <a href="mailto:osasfrontdesk@usc.edu" class="email">osasfrontdesk@usc.edu</a>.</p>
 </div>
-<div id="support-systems" class="section level3">
-<h3>Support Systems:</h3>
+<div id="support-systems" class="section level2">
+<h2>Support Systems:</h2>
 <p><em>Counseling and Mental Health - (213) 740-9355 – 24/7 on call</em><br />
 <a href="https://studenthealth.usc.edu/counseling/" class="uri">https://studenthealth.usc.edu/counseling/</a><br />
 Free and confidential mental health treatment for students, including short-term psychotherapy, group counseling, stress fitness workshops, and crisis intervention.</p>
@@ -749,7 +761,6 @@ A safe and confidential place to share your USC-related issues with a University
 <p><em>Occupational Therapy Faculty Practice - (323) 442-3340</em> or<br />
 <a href="mailto:otfp@med.usc.edu" class="email">otfp@med.usc.edu</a>, <a href="http://chan.usc.edu/otfp" class="uri">http://chan.usc.edu/otfp</a><br />
 Confidential Lifestyle Redesign services for USC students to support health promoting habits and routines that enhance quality of life and academic performance.</p>
-</div>
 </div>
 
     </div>
