deploy: 5e5a9818f5825ed3d31ccf601cb675d11a2861f9

--- a/assignment/01-lab/index.html
+++ b/assignment/01-lab/index.html
@@ -540,7 +540,7 @@
 <h1 id="getting-started">Getting started</h1>
 <h2 id="1-download-project">1 Download project</h2>
 <p>Go the the the lab page for this week on the 
-<a href="/PM566/class/01-class/">website</a>. You should see a &ldquo;Download&rdquo; button under the &ldquo;Lab Exercise&rdquo; section. Click it to download the template for your responses to this lab, <code>01-lab-hello-r.Rmd</code>.</p>
+<a href="/PM566/class/01-class/">website</a>. You should see a &ldquo;Download&rdquo; button under the &ldquo;Lab Exercise&rdquo; section. Click it to download the template for your responses to this lab, <code>01-lab-hello-r.qmd</code>.</p>
 <h2 id="2-download-r">2 Download R</h2>
 <h3 id="if-you-dont-have-r-installed">If you don&rsquo;t have R installed.</h3>
 <p>Go to the 
