--- a/assignment/03-hw1/index.html
+++ b/assignment/03-hw1/index.html
@@ -537,7 +537,7 @@ Learning Goals  Download, read, and get familiar with an external dataset. Step 
 <p>We will work with air pollution data from the U.S. Environmental Protection Agency (EPA). The EPA has a national monitoring network of air pollution sites that The primary question you will answer is whether daily concentrations of PM$_{2.5}$ (particulate matter air pollution with aerodynamic diameter less than 2.5 <code>\(\mu\)</code>m) have decreased in California over the last 20 years (from 2002 to 2022).</p>
 <p>A primer on particulate matter air pollution can be found 
 <a href="https://www.epa.gov/pm-pollution/particulate-matter-pm-basics" target="_blank" rel="noopener">here</a>.</p>
-<p>Your assignment should be completed in R markdown.</p>
+<p>Your assignment should be completed in Quarto or R Markdown.</p>
 <h1 id="steps">Steps</h1>
 <ol>
 <li>
