--- a/assignment/02-lab/index.html
+++ b/assignment/02-lab/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Learning goals In this lab, you are expected to learn/put in practice the following skills:
  Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
-Updating a single repo One of the most common tasks that people uses git for is for collaborating.">
+Updating a single repo One of the most common tasks that people use git for is for collaborating.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/02-lab/">
@@ -249,7 +249,7 @@ Updating a single repo One of the most common tasks that people uses git for is 
   <meta property="og:title" content="Lab 02 - GitHub | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Learning goals In this lab, you are expected to learn/put in practice the following skills:
  Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
-Updating a single repo One of the most common tasks that people uses git for is for collaborating."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+Updating a single repo One of the most common tasks that people use git for is for collaborating."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -536,7 +536,7 @@ Updating a single repo One of the most common tasks that people uses git for is 
 fundamental tool for academia/industry, we will be using this tool throughout
 the course, meaning that your grade will depend on it :).</p>
 <h1 id="updating-a-single-repo">Updating a single repo</h1>
-<p>One of the most common tasks that people uses git for is for collaborating. While
+<p>One of the most common tasks that people use git for is for collaborating. While
 in general team members organize such that there is no overlapping editing of
 the files, <code>git</code> is (usually) smart enough to avoid clashes when multiple edits are done in
 the same document<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. To show this, we will do a collaborative edit of
