deploy: c579da22a386a591cfae3bc6f7f44376f8b749cf

--- a/assignment/05-hw2/index.html
+++ b/assignment/05-hw2/index.html
@@ -577,9 +577,9 @@ town, sex, obesity level, and &ldquo;smoke_gas_exposure.&rdquo;</p>
 <li>What is the association between smoke and gas exposure and FEV?</li>
 <li>What is the association between PM2.5 exposure and FEV?</li>
 </ol>
-<p>Follow the EDA checklist from week 3 and the previous assignment. Be sure to focus on the key variables.
-Visualization
-Create the following figures and interpret them. Be sure to include easily understandable axes, titles, and legends.</p>
+<p>Follow the EDA checklist from week 3 and the previous assignment. Be sure to focus on the key variables.</p>
+<h2 id="visualization">Visualization</h2>
+<p>Create the following figures and interpret them. Be sure to include easily understandable axes, titles, and legends.</p>
 <ol>
 <li>Facet plot showing scatterplots with regression lines of  BMI vs FEV by “townname”.</li>
 <li>Stacked histograms of FEV by BMI category and FEV by smoke/gas exposure. Use different color schemes than the ggplot default.</li>
