--- a/assignment/09-hw3/index.html
+++ b/assignment/09-hw3/index.html
@@ -536,7 +536,7 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
 <p>Using the NCBI API, look for papers that show up under the term &ldquo;sars-cov-2 trial vaccine.&rdquo; Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p>
 </li>
 <li>
-<p>Using the list of pubmed ids you retrieved, download each papers' details using the query parameter rettype = abstract. If you get more than 250 ids, just keep the first 250.</p>
+<p>Using the list of PubMed IDs you retrieved, download each papers' details using the query parameter <code>rettype = abstract</code>. If you get more than 250 ids, just keep the first 250.</p>
 </li>
 <li>
 <p>As we did in lab 7. Create a dataset containing the following:</p>
